--- a/FINAL_PROJECT_OF_AIML_OF_MONKEYPOX_DATASET.ipynb
+++ b/FINAL_PROJECT_OF_AIML_OF_MONKEYPOX_DATASET.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dheeraj0000/MONKEYPOX-DISEASE-PREDICTION-/blob/main/FINAL_PROJECT_OF_AIML_OF_MONKEYPOX_DATASET.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -3509,10 +3499,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1IqNpO5jvz0__bOOEj6erB_3hIvdBwqnz",
-      "authorship_tag": "ABX9TyNuXvigkSbTMNbZ7aW0CPaf",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
